--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 </head>
 
 <body>
+    <div class="toolbar">
+        <div class="toolbar-tool">
+            <input type="radio" name="tool" id="selection" class="toolbar-button" checked>
+            <label for="selection" class="toolbar-description">Выбор</label>
+        </div>
+        <div class="toolbar-tool">
+            <input type="radio" name="tool" id="line" class="toolbar-button" checked>
+            <label for="line" class="toolbar-description">Линия</label>
+        </div>
+        <div class="toolbar-tool">
+            <input type="radio" name="tool" id="rectangle" class="toolbar-button">
+            <label for="rectangle" class="toolbar-description">Прямоугольник</label>
+        </div>
+    </div>
     <canvas id="canvas">Не поддерживается браузером</canvas>
 </body>
 
