--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <label for="selection" class="toolbar-description">Выбор</label>
         </div>
         <div class="toolbar-tool">
-            <input type="radio" name="tool" id="line" class="toolbar-button" checked>
+            <input type="radio" name="tool" id="line" class="toolbar-button">
             <label for="line" class="toolbar-description">Линия</label>
         </div>
         <div class="toolbar-tool">
