--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="layer-ui">
-            <div class="upper-toolbar">
+            <div class="menu-top">
                 <div class="toolbar">
                     <div class="toolbar-tool">
                         <input type="radio" name="tool" id="selection" class="toolbar-button" checked>
@@ -36,7 +36,7 @@
                     </div> -->
                 </div>
             </div>
-            <div class="lower-toolbar">
+            <div class="menu-bottom">
                 <div class="toolbar">
                     <div class="toolbar-tool scale-tool">
                         <button id="zoom-out">-</button>
